tests/integration/text_document/snapshots/integration__text_document__completion__color_word.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 345
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\color{re}\n%CUR         ^\n%1.1        ^^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "red",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "red"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "Red",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Red"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "RedOrange",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "RedOrange"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "RedViolet",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "RedViolet"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "BrickRed",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "BrickRed"
    }
  }
]
