tests/integration/text_document/snapshots/integration__text_document__completion__component_command_bibtex.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 408
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article{b, \n%SRC     c = {\\LaT }\n%CUR            ^\n%1.1           ^^^\n%SRC }\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "LaTeX",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LaTeX"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "LaTeXe",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LaTeXe"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "latexreleaseversion",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "latexreleaseversion"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "LastDeclaredEncoding",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LastDeclaredEncoding"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "last",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "last"
    }
  }
]
