tests/integration/text_document/snapshots/integration__text_document__completion__component_environment_simple.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 423
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\begin{doc\n%CUR           ^\n%1.1        ^^^\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "document",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "document"
    }
  }
]
